# zero-docs

./: README.md  action.yml  generate_docs.py  pyproject.toml
.github/workflows/: test_zero_docs.yml  test_zero_docs_manual.yml  test_zero_docs_pr.yml
tests/: another_tests.py  tests.py
zero_docs/: __init__.py  config.py  docstring_generator.py  docstring_updater.py  enums.py  main.py
